--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
+body{
+background-color: red;
+}
+h1{
+    color: blue;
+    text-align: center;
+    font-weight: bold;
+    font-family: algerian;
+    text-shadow: 2px 2px 5px yellow;
+}
 
